<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/background"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/dialog_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/nombreEditText"
        android:hint="@string/nombre"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/apellidoEditText"
        android:hint="@string/apellido"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/cedulaEditText"
        android:hint="@string/cedula"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/telefonoEditText"
        android:hint="@string/telefono"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/saveButton"
        android:text="@string/dialog_save"
        android:background="@drawable/background_button"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>