<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/apellidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreTextView" />

    <TextView
        android:id="@+id/cedulaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/cedula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoTextView" />

    <TextView
        android:id="@+id/telefonoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cedulaTextView"/>

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>